cdk/cdk.out/cdk-stack.template.json
{
 "Resources": {
  "mycdkvpc037DA4AF": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "cdk-stack/my-cdk-vpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "cdk-stack/my-cdk-vpc/Resource"
   }
  },
  "mycdkvpcpublicsubnet1Subnet1Subnet8383DBBA": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "mycdkvpc037DA4AF"
    },
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.0.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "public-subnet-1"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "cdk-stack/my-cdk-vpc/public-subnet-1Subnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "cdk-stack/my-cdk-vpc/public-subnet-1Subnet1/Subnet"
   }
  },
  "mycdkvpcpublicsubnet1Subnet1RouteTableE1ABF705": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "mycdkvpc037DA4AF"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "cdk-stack/my-cdk-vpc/public-subnet-1Subnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "cdk-stack/my-cdk-vpc/public-subnet-1Subnet1/RouteTable"
   }
  },
  "mycdkvpcpublicsubnet1Subnet1RouteTableAssociation160A4CBB": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "mycdkvpcpublicsubnet1Subnet1RouteTableE1ABF705"
    },
    "SubnetId": {
     "Ref": "mycdkvpcpublicsubnet1Subnet1Subnet8383DBBA"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cdk-stack/my-cdk-vpc/public-subnet-1Subnet1/RouteTableAssociation"
   }
  },
  "mycdkvpcpublicsubnet1Subnet1DefaultRoute1255C1C4": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "mycdkvpcpublicsubnet1Subnet1RouteTableE1ABF705"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "mycdkvpcIGW4220D5A9"
    }
   },
   "DependsOn": [
    "mycdkvpcVPCGW2444B783"
   ],
   "Metadata": {
    "aws:cdk:path": "cdk-stack/my-cdk-vpc/public-subnet-1Subnet1/DefaultRoute"
   }
  },
  "mycdkvpcpublicsubnet1Subnet2SubnetE104EC20": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "mycdkvpc037DA4AF"
    },
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.1.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "public-subnet-1"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "cdk-stack/my-cdk-vpc/public-subnet-1Subnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "cdk-stack/my-cdk-vpc/public-subnet-1Subnet2/Subnet"
   }
  },
  "mycdkvpcpublicsubnet1Subnet2RouteTable3099F008": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "mycdkvpc037DA4AF"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "cdk-stack/my-cdk-vpc/public-subnet-1Subnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "cdk-stack/my-cdk-vpc/public-subnet-1Subnet2/RouteTable"
   }
  },
  "mycdkvpcpublicsubnet1Subnet2RouteTableAssociation2ECC1C4A": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "mycdkvpcpublicsubnet1Subnet2RouteTable3099F008"
    },
    "SubnetId": {
     "Ref": "mycdkvpcpublicsubnet1Subnet2SubnetE104EC20"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cdk-stack/my-cdk-vpc/public-subnet-1Subnet2/RouteTableAssociation"
   }
  },
  "mycdkvpcpublicsubnet1Subnet2DefaultRoute98E2F656": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "mycdkvpcpublicsubnet1Subnet2RouteTable3099F008"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "mycdkvpcIGW4220D5A9"
    }
   },
   "DependsOn": [
    "mycdkvpcVPCGW2444B783"
   ],
   "Metadata": {
    "aws:cdk:path": "cdk-stack/my-cdk-vpc/public-subnet-1Subnet2/DefaultRoute"
   }
  },
  "mycdkvpcisolatedsubnet1Subnet1Subnet79DD3BAF": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "mycdkvpc037DA4AF"
    },
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.2.0/28",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "isolated-subnet-1"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Isolated"
     },
     {
      "Key": "Name",
      "Value": "cdk-stack/my-cdk-vpc/isolated-subnet-1Subnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "cdk-stack/my-cdk-vpc/isolated-subnet-1Subnet1/Subnet"
   }
  },
  "mycdkvpcisolatedsubnet1Subnet1RouteTable78317948": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "mycdkvpc037DA4AF"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "cdk-stack/my-cdk-vpc/isolated-subnet-1Subnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "cdk-stack/my-cdk-vpc/isolated-subnet-1Subnet1/RouteTable"
   }
  },
  "mycdkvpcisolatedsubnet1Subnet1RouteTableAssociation0E10D4C9": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "mycdkvpcisolatedsubnet1Subnet1RouteTable78317948"
    },
    "SubnetId": {
     "Ref": "mycdkvpcisolatedsubnet1Subnet1Subnet79DD3BAF"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cdk-stack/my-cdk-vpc/isolated-subnet-1Subnet1/RouteTableAssociation"
   }
  },
  "mycdkvpcisolatedsubnet1Subnet2Subnet5C8345CD": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "mycdkvpc037DA4AF"
    },
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.2.16/28",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "isolated-subnet-1"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Isolated"
     },
     {
      "Key": "Name",
      "Value": "cdk-stack/my-cdk-vpc/isolated-subnet-1Subnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "cdk-stack/my-cdk-vpc/isolated-subnet-1Subnet2/Subnet"
   }
  },
  "mycdkvpcisolatedsubnet1Subnet2RouteTable69CCD17D": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "mycdkvpc037DA4AF"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "cdk-stack/my-cdk-vpc/isolated-subnet-1Subnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "cdk-stack/my-cdk-vpc/isolated-subnet-1Subnet2/RouteTable"
   }
  },
  "mycdkvpcisolatedsubnet1Subnet2RouteTableAssociation416F7812": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "mycdkvpcisolatedsubnet1Subnet2RouteTable69CCD17D"
    },
    "SubnetId": {
     "Ref": "mycdkvpcisolatedsubnet1Subnet2Subnet5C8345CD"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cdk-stack/my-cdk-vpc/isolated-subnet-1Subnet2/RouteTableAssociation"
   }
  },
  "mycdkvpcIGW4220D5A9": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "cdk-stack/my-cdk-vpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "cdk-stack/my-cdk-vpc/IGW"
   }
  },
  "mycdkvpcVPCGW2444B783": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "VpcId": {
     "Ref": "mycdkvpc037DA4AF"
    },
    "InternetGatewayId": {
     "Ref": "mycdkvpcIGW4220D5A9"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cdk-stack/my-cdk-vpc/VPCGW"
   }
  },
  "ec2instancesgCC5C402A": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "cdk-stack/ec2-instance-sg",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "SecurityGroupIngress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "allow SSH connections from anywhere",
      "FromPort": 22,
      "IpProtocol": "tcp",
      "ToPort": 22
     }
    ],
    "VpcId": {
     "Ref": "mycdkvpc037DA4AF"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cdk-stack/ec2-instance-sg/Resource"
   }
  },
  "ec2instanceInstanceRoleCA97C688": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ec2.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "cdk-stack/ec2-instance"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "cdk-stack/ec2-instance/InstanceRole/Resource"
   }
  },
  "ec2instanceInstanceProfile9BCE9015": {
   "Type": "AWS::IAM::InstanceProfile",
   "Properties": {
    "Roles": [
     {
      "Ref": "ec2instanceInstanceRoleCA97C688"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "cdk-stack/ec2-instance/InstanceProfile"
   }
  },
  "ec2instance42082E81": {
   "Type": "AWS::EC2::Instance",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "IamInstanceProfile": {
     "Ref": "ec2instanceInstanceProfile9BCE9015"
    },
    "ImageId": {
     "Ref": "SsmParameterValueawsserviceamiamazonlinuxlatestamzn2amihvmx8664gp2C96584B6F00A464EAD1953AFF4B05118Parameter"
    },
    "InstanceType": "t2.micro",
    "KeyName": "rss-ec2-key-pair",
    "SecurityGroupIds": [
     {
      "Fn::GetAtt": [
       "ec2instancesgCC5C402A",
       "GroupId"
      ]
     }
    ],
    "SubnetId": {
     "Ref": "mycdkvpcpublicsubnet1Subnet1Subnet8383DBBA"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "cdk-stack/ec2-instance"
     }
    ],
    "UserData": {
     "Fn::Base64": "#!/bin/bash"
    }
   },
   "DependsOn": [
    "ec2instanceInstanceRoleCA97C688"
   ],
   "Metadata": {
    "aws:cdk:path": "cdk-stack/ec2-instance/Resource"
   }
  },
  "dbinstanceSubnetGroupE4F5C66F": {
   "Type": "AWS::RDS::DBSubnetGroup",
   "Properties": {
    "DBSubnetGroupDescription": "Subnet group for db-instance database",
    "SubnetIds": [
     {
      "Ref": "mycdkvpcisolatedsubnet1Subnet1Subnet79DD3BAF"
     },
     {
      "Ref": "mycdkvpcisolatedsubnet1Subnet2Subnet5C8345CD"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "cdk-stack/db-instance/SubnetGroup/Default"
   }
  },
  "dbinstanceSecurityGroupF70613D6": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Security group for db-instance database",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "mycdkvpc037DA4AF"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cdk-stack/db-instance/SecurityGroup/Resource"
   }
  },
  "dbinstanceSecurityGroupfromcdkstackec2instancesgDFED79885432D1221842": {
   "Type": "AWS::EC2::SecurityGroupIngress",
   "Properties": {
    "IpProtocol": "tcp",
    "Description": "from cdkstackec2instancesgDFED7988:5432",
    "FromPort": 5432,
    "GroupId": {
     "Fn::GetAtt": [
      "dbinstanceSecurityGroupF70613D6",
      "GroupId"
     ]
    },
    "SourceSecurityGroupId": {
     "Fn::GetAtt": [
      "ec2instancesgCC5C402A",
      "GroupId"
     ]
    },
    "ToPort": 5432
   },
   "Metadata": {
    "aws:cdk:path": "cdk-stack/db-instance/SecurityGroup/from cdkstackec2instancesgDFED7988:5432"
   }
  },
  "cdkstackdbinstanceSecret821E84F33fdaad7efa858a3daf9490cf0a702aeb": {
   "Type": "AWS::SecretsManager::Secret",
   "Properties": {
    "Description": {
     "Fn::Join": [
      "",
      [
       "Generated by the CDK for stack: ",
       {
        "Ref": "AWS::StackName"
       }
      ]
     ]
    },
    "GenerateSecretString": {
     "ExcludeCharacters": " %+~`#$&*()|[]{}:;<>?!'/@\"\\",
     "GenerateStringKey": "password",
     "PasswordLength": 30,
     "SecretStringTemplate": "{\"username\":\"postgres\"}"
    }
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "cdk-stack/db-instance/Secret/Resource"
   }
  },
  "dbinstanceSecretAttachmentC9F3DAC7": {
   "Type": "AWS::SecretsManager::SecretTargetAttachment",
   "Properties": {
    "SecretId": {
     "Ref": "cdkstackdbinstanceSecret821E84F33fdaad7efa858a3daf9490cf0a702aeb"
    },
    "TargetId": {
     "Ref": "dbinstance310A317F"
    },
    "TargetType": "AWS::RDS::DBInstance"
   },
   "Metadata": {
    "aws:cdk:path": "cdk-stack/db-instance/Secret/Attachment/Resource"
   }
  },
  "dbinstance310A317F": {
   "Type": "AWS::RDS::DBInstance",
   "Properties": {
    "AllocatedStorage": "100",
    "AllowMajorVersionUpgrade": false,
    "AutoMinorVersionUpgrade": true,
    "BackupRetentionPeriod": 0,
    "CopyTagsToSnapshot": true,
    "DBInstanceClass": "db.t3.micro",
    "DBName": "todosdb",
    "DBSubnetGroupName": {
     "Ref": "dbinstanceSubnetGroupE4F5C66F"
    },
    "DeleteAutomatedBackups": true,
    "DeletionProtection": false,
    "Engine": "postgres",
    "EngineVersion": "14",
    "MasterUsername": "postgres",
    "MasterUserPassword": {
     "Fn::Join": [
      "",
      [
       "{{resolve:secretsmanager:",
       {
        "Ref": "cdkstackdbinstanceSecret821E84F33fdaad7efa858a3daf9490cf0a702aeb"
       },
       ":SecretString:password::}}"
      ]
     ]
    },
    "MultiAZ": false,
    "PubliclyAccessible": false,
    "StorageType": "gp2",
    "VPCSecurityGroups": [
     {
      "Fn::GetAtt": [
       "dbinstanceSecurityGroupF70613D6",
       "GroupId"
      ]
     }
    ]
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "cdk-stack/db-instance/Resource"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/12RTW/CMAyGfwv3kA2E2BmohHpaVRDXyU0NC7QJih0Qqvrf1xL6wU52nryxX8dzuVzIzwncaaryy7TQmax2DOoiGvRToZrL6nBVYnM0h2QjEp8VWu18ZpBbNmSp9Yx7yAoc+MBWRFZpYG1NLxaJ0zdgHGrEhtE1+bahd3i8mr5OK25s/ZZoWOxQeaf5sXXWX5/t3kBsiMEoDCWH/E0Vm5NDolpoKGWV2uC7i92zxNmjLrAWLidZRcCQAWFfNFjvbUTrMejUTVsX5ovW3cta0JNSCQZO6GQV/LXCEPbgTsijoXvB/5u6FimS9S5MmYCDEpuPbA/fnq8+7Gck2ViT63YXtTA2R3mmj9tsIWdfcjk5k9ZT5w3rEmUa4h+dKJkbJQIAAA=="
   },
   "Metadata": {
    "aws:cdk:path": "cdk-stack/CDKMetadata/Default"
   },
   "Condition": "CDKMetadataAvailable"
  }
 },
 "Parameters": {
  "SsmParameterValueawsserviceamiamazonlinuxlatestamzn2amihvmx8664gp2C96584B6F00A464EAD1953AFF4B05118Parameter": {
   "Type": "AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>",
   "Default": "/aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2"
  },
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Outputs": {
  "dbEndpoint": {
   "Value": {
    "Fn::GetAtt": [
     "dbinstance310A317F",
     "Endpoint.Address"
    ]
   }
  },
  "secretName": {
   "Value": {
    "Fn::Join": [
     "-",
     [
      {
       "Fn::Select": [
        0,
        {
         "Fn::Split": [
          "-",
          {
           "Fn::Select": [
            6,
            {
             "Fn::Split": [
              ":",
              {
               "Ref": "cdkstackdbinstanceSecret821E84F33fdaad7efa858a3daf9490cf0a702aeb"
              }
             ]
            }
           ]
          }
         ]
        }
       ]
      },
      {
       "Fn::Select": [
        1,
        {
         "Fn::Split": [
          "-",
          {
           "Fn::Select": [
            6,
            {
             "Fn::Split": [
              ":",
              {
               "Ref": "cdkstackdbinstanceSecret821E84F33fdaad7efa858a3daf9490cf0a702aeb"
              }
             ]
            }
           ]
          }
         ]
        }
       ]
      }
     ]
    ]
   }
  }
 },
 "Conditions": {
  "CDKMetadataAvailable": {
   "Fn::Or": [
    {
     "Fn::Or": [
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "af-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-east-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-northeast-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-northeast-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-southeast-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-southeast-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ca-central-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "cn-north-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "cn-northwest-1"
       ]
      }
     ]
    },
    {
     "Fn::Or": [
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-central-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-north-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-west-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-west-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-west-3"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "me-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "sa-east-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "us-east-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "us-east-2"
       ]
      }
     ]
    },
    {
     "Fn::Or": [
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "us-west-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "us-west-2"
       ]
      }
     ]
    }
   ]
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
